# wallet-intelligence

./: .env.example  .gitignore  LICENSE  Makefile  README.md  alembic.ini  index.html  pyproject.toml
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md
src/wallet_intelligence/: app.py  cli.py
src/wallet_intelligence/api/: schemas.py
src/wallet_intelligence/api/routes/: alerts.py  analytics.py  wallets.py
src/wallet_intelligence/api/websocket/: live.py
src/wallet_intelligence/core/: __init__.py  config.py  database.py  redis.py
src/wallet_intelligence/frontend/: dashboard.html
src/wallet_intelligence/models/: wallet.py
src/wallet_intelligence/monitors/: base.py  evm.py  solana.py
src/wallet_intelligence/services/: ai_classifier.py  alert_service.py  price_oracle.py
src/wallet_intelligence/utils/: address.py  rate_limiter.py
tests/unit/: test_models.py  test_price_oracle.py  test_schemas.py
