[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wallet-intelligence"
version = "0.1.0"
description = "Real-time wallet tracking, whale monitoring, and smart money analytics powered by AI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Wallet Intelligence Team"}]
keywords = ["web3", "defi", "analytics", "wallet-tracking", "whale-alerts", "blockchain"]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "web3>=6.15.0",
    "solana>=0.34.0",
    "solders>=0.21.0",
    "httpx>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.12.0",
    "websockets>=12.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "aiohttp>=3.9.0",
    "eth-abi>=5.0.0",
    "base58>=2.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
wallet-intel = "wallet_intelligence.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wallet_intelligence"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
